--- a/df_style.css
+++ b/df_style.css
@@ -1,12 +1,11 @@
 /* includes alternating gray and white with on-hover color */
 .jack_style {
-    
     font-size: 2pt;
     font-family: Arial ;
     border-collapse: collapse;
     border: 1px solid silver;
-    width: 100% important!;
-    height: 100px important!;
+    width: 100% ;
+    height: 100px;
 }
 
 .jack_style td, th {
