--- a/df_style.css
+++ b/df_style.css
@@ -4,8 +4,8 @@
     font-family: Arial ;
     border-collapse: collapse;
     border: 1px solid silver;
-    width: 100% ;
-    height: 100px;
+    width: 100% !important;
+    height: 100px !important;
 }
 
 .jack_style td, th {
